# newsletter

./: .env.template  README.md  alembic.ini  docker-compose.yml  pyproject.toml
auto_journalist/: Dockerfile  README.md  config.py  db.py  gui.py  main.py  models.py  publish.py
auto_journalist/agents/: analytics_agent.py  base_agent.py  bot_agent.py  commentary_agent.py  crawler_agent.py  crypto_agent.py  crypto_orchestrator.py  factcheck_agent.py  formatter_agent.py  news_stream_agent.py  orchestrator_agent.py  publisher_agent.py  source_manager_agent.py  summarizer_agent.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_stream_items.py
